// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render Tab inside a component correctly 1`] = `
<div class="mi-tabs mi-tabs--line">
  <div class="mi-tabs__wrap">
    <div
      role="tablist"
      class="mi-tabs__nav mi-tabs__nav--line"
      aria-orientation="horizontal"
    >
      <div
        id="mi-tabs-0"
        role="tab"
        class="mi-tab mi-tab--line"
        tabindex="-1"
        aria-selected="false"
        aria-controls="mi-tab"
      >
        <span class="mi-tab__text mi-tab__text--ellipsis">
          1
        </span>
      </div>
      <div
        id="mi-tabs-1"
        role="tab"
        class="mi-tab mi-tab--line mi-tab--active"
        tabindex="0"
        aria-selected="true"
        aria-controls="mi-tab"
      >
        <span class="mi-tab__text mi-tab__text--ellipsis">
          2
        </span>
      </div>
      <div
        id="mi-tabs-2"
        role="tab"
        class="mi-tab mi-tab--line"
        tabindex="-1"
        aria-selected="false"
        aria-controls="mi-tab"
      >
        <span class="mi-tab__text mi-tab__text--ellipsis">
          3
        </span>
      </div>
      <div
        class="mi-tabs__line"
        style="transform: translateX(50px) translateX(-50%);"
      >
      </div>
    </div>
  </div>
  <div class="mi-tabs__content">
    <div
      id="mi-tab"
      role="tabpanel"
      class="mi-tab__panel"
      tabindex="-1"
      aria-labelledby="mi-tabs-0"
      style="display: none;"
    >
    </div>
    <div
      id="mi-tab"
      role="tabpanel"
      class="mi-tab__panel"
      tabindex="0"
      aria-labelledby="mi-tabs-1"
      style
    >
      2
    </div>
    <div
      id="mi-tab"
      role="tabpanel"
      class="mi-tab__panel"
      tabindex="-1"
      aria-labelledby="mi-tabs-2"
      style="display: none;"
    >
    </div>
  </div>
</div>
`;

exports[`should render correctly after inserting a tab 1`] = `
<div class="mi-tabs mi-tabs--line">
  <div class="mi-tabs__wrap">
    <div
      role="tablist"
      class="mi-tabs__nav mi-tabs__nav--line"
      aria-orientation="horizontal"
    >
      <div
        id="mi-tabs-0"
        role="tab"
        class="mi-tab mi-tab--line"
        tabindex="-1"
        aria-selected="false"
        aria-controls="mi-tab"
      >
        <span class="mi-tab__text mi-tab__text--ellipsis">
          1
        </span>
      </div>
      <div
        id="mi-tabs-1"
        role="tab"
        class="mi-tab mi-tab--line mi-tab--active"
        tabindex="0"
        aria-selected="true"
        aria-controls="mi-tab"
      >
        <span class="mi-tab__text mi-tab__text--ellipsis">
          2
        </span>
      </div>
      <div
        id="mi-tabs-2"
        role="tab"
        class="mi-tab mi-tab--line"
        tabindex="-1"
        aria-selected="false"
        aria-controls="mi-tab"
      >
        <span class="mi-tab__text mi-tab__text--ellipsis">
          3
        </span>
      </div>
      <div
        class="mi-tabs__line"
        style="transform: translateX(50px) translateX(-50%); transition-duration: 0.3s;"
      >
      </div>
    </div>
  </div>
  <div class="mi-tabs__content">
    <div
      id="mi-tab"
      role="tabpanel"
      class="mi-tab__panel"
      tabindex="-1"
      aria-labelledby="mi-tabs-0"
      style="display: none;"
    >
    </div>
    <div>
      <div
        id="mi-tab"
        role="tabpanel"
        class="mi-tab__panel"
        tabindex="0"
        aria-labelledby="mi-tabs-1"
      >
        2
      </div>
    </div>
    <div
      id="mi-tab"
      role="tabpanel"
      class="mi-tab__panel"
      tabindex="-1"
      aria-labelledby="mi-tabs-2"
      style="display: none;"
    >
      3
    </div>
  </div>
</div>
`;

exports[`should render correctly after inserting a tab from an array 1`] = `
<div class="mi-tabs mi-tabs--line">
  <div class="mi-tabs__wrap">
    <div
      role="tablist"
      class="mi-tabs__nav mi-tabs__nav--line"
      aria-orientation="horizontal"
    >
      <div
        id="mi-tabs-0"
        role="tab"
        class="mi-tab mi-tab--line"
        tabindex="-1"
        aria-selected="false"
        aria-controls="mi-tab"
      >
        <span class="mi-tab__text mi-tab__text--ellipsis">
          1
        </span>
      </div>
      <div
        id="mi-tabs-1"
        role="tab"
        class="mi-tab mi-tab--line mi-tab--active"
        tabindex="0"
        aria-selected="true"
        aria-controls="mi-tab"
      >
        <span class="mi-tab__text mi-tab__text--ellipsis">
          2
        </span>
      </div>
      <div
        id="mi-tabs-2"
        role="tab"
        class="mi-tab mi-tab--line"
        tabindex="-1"
        aria-selected="false"
        aria-controls="mi-tab"
      >
        <span class="mi-tab__text mi-tab__text--ellipsis">
          3
        </span>
      </div>
      <div
        class="mi-tabs__line"
        style="transform: translateX(50px) translateX(-50%);"
      >
      </div>
    </div>
  </div>
  <div class="mi-tabs__content">
  </div>
</div>
`;

exports[`should render correctly after inserting a tab with name 1`] = `
<div class="mi-tabs mi-tabs--line">
  <div class="mi-tabs__wrap">
    <div
      role="tablist"
      class="mi-tabs__nav mi-tabs__nav--line"
      aria-orientation="horizontal"
    >
      <div
        id="mi-tabs-0"
        role="tab"
        class="mi-tab mi-tab--line"
        tabindex="-1"
        aria-selected="false"
        aria-controls="mi-tab"
      >
        <span class="mi-tab__text mi-tab__text--ellipsis">
          bar
        </span>
      </div>
      <div
        id="mi-tabs-1"
        role="tab"
        class="mi-tab mi-tab--line mi-tab--active"
        tabindex="0"
        aria-selected="true"
        aria-controls="mi-tab"
      >
        <span class="mi-tab__text mi-tab__text--ellipsis">
          foo
        </span>
      </div>
      <div
        class="mi-tabs__line"
        style="transform: translateX(50px) translateX(-50%); transition-duration: 0.3s;"
      >
      </div>
    </div>
  </div>
  <div class="mi-tabs__content">
    <div
      id="mi-tab"
      role="tabpanel"
      class="mi-tab__panel"
      tabindex="-1"
      aria-labelledby="mi-tabs-0"
      style="display: none;"
    >
      bar
    </div>
    <div
      id="mi-tab"
      role="tabpanel"
      class="mi-tab__panel"
      tabindex="0"
      aria-labelledby="mi-tabs-1"
      style
    >
      foo
    </div>
  </div>
</div>
`;

exports[`should render nav-bottom slot correctly 1`] = `
<div class="mi-tabs mi-tabs--line">
  <div class="mi-tabs__wrap">
    <div
      role="tablist"
      class="mi-tabs__nav mi-tabs__nav--line"
      aria-orientation="horizontal"
    >
    </div>
  </div>
  Nav Bottom
  <div class="mi-tabs__content">
  </div>
</div>
`;
